test/testdata/classes/methods/not_indexable_assignment_error.lox
class Foo {
  bar() {}
}
Foo().bar[0] = 0; // error: 'function' value is not indexable
